ERR
!chmod +x extract_frames.sh
# create destination folder and run
./extract_frames.sh data/train_videos/clip_01.mp4 data/frames/train/clip_01 60 1920 1080

gives output as 

  Cell In[7], line 3
    ./extract_frames.sh data/train_videos/clip_01.mp4 data/frames/train/clip_01 60 1920 1080
    ^
SyntaxError: invalid syntax
